# wiki

./: .editorconfig  .gitignore  .mcp.json  Cargo.toml  INGEST_FLOW.md  README.md  build.rs  config.example.toml  justfile  overview.md
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: reindex.md
docs/concepts/: ingest_flow.md  overview.md  readme.md
docs/prd/: question_lifecycle_collapse.md
docs/tools/: admin.md  author.md  code.md  code_index.md  code_read.md  code_refs.md  code_search.md  code_validate.md  create_purpose.md  delete_doc.md  delete_purpose.md  docs.md  get.md  ingest.md  learn.md  learn_from_feedback.md  list.md  list_open_questions.md  list_purposes.md  mark_question.md  migrate_templated_questions.md  purpose.md  recompute_weights.md  reembed_purposes.md  retag.md  sanitize.md  search.md  update.md
hooks/: hooks.json
languages/py/: Cargo.toml
languages/rs/: Cargo.toml
obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace.json
obsidian/snippets/: graph-tag-default.css
resources/: .mcp.json  settings.json
resources/commands/: ingest.md
scripts/: migrate-layout.ps1  pre-read-hook.ps1  pre-read-hook.sh
skills/learn/: SKILL.md
src/: cache.rs  chunker.rs  classifier.rs  config.rs  docs.rs  extract.rs  http.rs  io.rs  learn.rs  main.rs  sanitize.rs  search.rs  smart.rs  store.rs  tools.rs  walk.rs  weight.rs
src/code/: language.rs  mod.rs  splitter.rs  watcher.rs
src/learn/: code_links.rs  connect.rs  dedup.rs  feedback.rs  infra.rs  links.rs  migrate.rs  mod.rs  qa.rs  (+2 more)
(+25 files in other folders)
