[package]
name = "wiki"
version = "1.13.0"
edition = "2021"
build = "build.rs"

[dependencies]
rmcp = { version = "=1.6.0", features = ["transport-io"] }
tantivy = "=0.26.1"
serde = { version = "1.0", features = ["derive"] }
schemars = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0.18"
anyhow = "1.0"
notify = "8"
dirs = "6"
wasmtime = "44"
wasmtime-wasi = "44"
regex = "1"
glob = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8"
include_dir = "0.7"

[[bin]]
name = "wiki"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
